--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/img/favicon.ico">
-       <link rel="stylesheet" href="./css/sytle.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/sytle.css">
     <title>ConceptoTec</title>
 </head>
+
 <body>
+    <div class="container border">
+        <div class="row">
+            <header id="header" class="col-12 bg-primary text-white">
+                <h1>ConceptoTec.</h1>
+            </header>
 
-          
+            <nav id="menu" class="col-12 bg-secondary text-white">
+                <ul class="row w-50">
+                    <li class="col"><a href="index.html">Inicio</a></li>
+                    <li class="col"><a href="./pages/quienes_somos.html">¿Quienes somos?</a></li>
+                    <li class="col"><a href="./pages/servicios.html">Servicios</a></li>
+                    <li class="col"><a href="./pages/productos.html">Productos</a></li>
+                    <li class="col"><a href="./pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav> 
+        </div>
 
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
