--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <div class="container border">
+    <div class="container">
         <div class="row">
-            <header id="header" class="col-12 bg-primary text-white">
-                <h1>ConceptoTec.</h1>
+            <header id="header" class="col-12 text-white p-4">
+                <img src="./assets/img/logotipo.png"  alt="logo de conceptoTec">
             </header>
 
             <nav id="menu" class="col-12 bg-secondary text-white">
-                <ul class="row w-50">
+                <ul class="row">
                     <li class="col"><a href="index.html">Inicio</a></li>
                     <li class="col"><a href="./pages/quienes_somos.html">¿Quienes somos?</a></li>
                     <li class="col"><a href="./pages/servicios.html">Servicios</a></li>
@@ -29,6 +29,33 @@
                 </ul>
             </nav> 
         </div>
+
+        <main id="content" class="row">
+            <section id="productos" class="col-9 border">
+                <h2>Productos</h2>
+                <hr>
+                <div class="items">
+                    <div class="item col-3 bg-primary"></div>
+
+                </div>
+                <div class="items">
+                    <div class="item col-3 bg-primary"></div>
+
+                </div>
+                <div class="items">
+                    <div class="item col-3 bg-primary"></div>
+
+                </div>
+                <div class="items">
+                    <div class="item col-3 bg-primary"></div>
+
+                </div>
+            </section>
+
+            <aside class="col-3 border">
+                <h2>Barra lateral</h2>
+            </aside>
+        </main>
 
     </div>
 
