empenzado hacer la pgina inicio responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <header id="header" class="col-12">
+      <header id="header" class="col col-md-12">
         <nav class="navbar navbar-expand-lg bg-dark">
           <img src="./assets/img/logotipo.png" alt="logo de conceptotec">
           <div class="container-fluid">
@@ -24,7 +24,7 @@
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="menu_navegacion" id="navbarSupportedContent">
+            <div class="menu_navegacion col col-md-12 col-sm-12" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/index.htmlS">Inicio</a>
@@ -73,13 +73,13 @@
     </div>
 
 
-    <main id="content">
+    <main id="content-fluid">
       <section id="productos" class="col-12 mt-5">
         <h2>Productos</h2>
         <hr>
         <div class="cards row">
 
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_01.png" class="card-img-top mt-4" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Todo en uno HP 21</h5>
@@ -96,11 +96,12 @@
             </div>
           </div>
 
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_2.jpg" class="card-img-top" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Computador Gamer</h5>
-              <p class="card-text">MONITOR INCLUIDO: 22 PULGADAS LED RESOLUCION FULL HD CON HDMI & VGA
+              <p class="card-text">
+                MONITOR INCLUIDO: 22 PULGADAS LED RESOLUCION FULL HD CON HDMI & VGA
                 PROCESADOR: AMD RYZEN ™ 7 5700G.
                 N.º DE NUCLEOS DE CPU: 8.
                 N.º DE SUBPROCESOS 16.
@@ -111,7 +112,7 @@
             </div>
           </div>
 
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/tablet.jpg" class="card-img-top mt-5" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Tablet lenovo</h5>
@@ -127,7 +128,7 @@
             </div>
           </div>
 
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_04.jpg" class="card-img-top mt-4" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Portátil Acer</h5>
@@ -144,7 +145,7 @@
             </div>
           </div>
 
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_05.jpg" class="card-img-top mt-3" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Portátil Asus</h5>
@@ -158,9 +159,9 @@
           </div>
         </div>
 
-        <article id="btn" class="mb-4">
+        <div id="btn" class="mb-4 col col-md-12">
           <a href="./pages/productos.html">Ver más</a>
-        </article>
+        </div>
       </section>
 
       <footer id="footer">
