--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <header id="header" class="col col-md-12">
+      <header id="header">
         <nav class="navbar navbar-expand-lg bg-dark">
           <img src="./assets/img/logotipo.png" alt="logo de conceptotec">
           <div class="container-fluid">
