--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -47,13 +47,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./assets/img/impresion_3D.jpg" class="d-block w-100" alt="imagen de impresión 3D">
+                  <img src="../assets/img/impresion_3D.jpg" class="d-block w-100" alt="imagen de impresión 3D">
                 </div>
                 <div class="carousel-item">
-                  <img src="./assets/img/camaras-seguridad.jpg" class="d-block w-100" alt="imagen de camaras de seguridad">
+                  <img src="../assets/img/camaras-seguridad.jpg" class="d-block w-100" alt="imagen de camaras de seguridad">
                 </div>
                 <div class="carousel-item">
-                  <img src="./assets/img/robotica.jpg" class="d-block w-100" alt="proyecto de robotica">
+                  <img src="../assets/img/robotica.jpg" class="d-block w-100" alt="proyecto de robotica">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
