--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <header id="header">
+      <header id="header" class="col col-md-12">
         <nav class="navbar navbar-expand-lg bg-dark">
           <img src="./assets/img/logotipo.png" alt="logo de conceptotec">
-          <div class="container-fluid">
+          <div class="navberQS container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -27,19 +27,19 @@
             <div class="menu_navegacion col col-md-12 col-sm-12" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/index.htmlS">Inicio</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./pages/quienes_somos.html">¿Quienes somos?</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/quienes_somos.html">Servicios</a>
+                  <a class="nav-link" href="./pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/quienes_somos.html">Productos</a>
+                  <a class="nav-link" href="./pages/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/quienes_somos.html">Contacto</a>
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
