--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -15,34 +15,42 @@
         <div class="row">
           <header id="header" class="col col-md-12">
             <nav class="navbar navbar-expand-lg bg-dark">
-              <img src="./assets/img/logotipo.png" alt="logo de conceptotec">
+              <img src="..//assets/img/logotipo.png" alt="logo de conceptotec">
               <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                   data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                   aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="menu_navegacion col col-md-12 col-sm-12" id="navbarSupportedContent">
+                <div class="menu_navegacion col col-md-12 col-sm-12 text-white" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/index.htmlS">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/quienes_somos.html">¿Quienes somos?</a>
+                      <a class="nav-link" href="../pages/quienes_somos.html">¿Quienes somos?</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/quienes_somos.html">Servicios</a>
+                      <a class="nav-link" href="../pages/servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/quienes_somos.html">Productos</a>
+                      <a class="nav-link" href="./productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/quienes_somos.html">Contacto</a>
+                      <a class="nav-link" href="..//pages/contacto.html">Contacto</a>
                     </li>
                   </ul>
                 </div>
               </div>
             </nav>
+            
+            <main id="main">
+                <div class="container-fluid">
+                    <div class="row bg-primary">
+
+                    </div>
+                </div>
+            </main>
     
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
