--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../assets/img/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/sytle.css">
+    <link rel="stylesheet" href="../css/sytle.css">
     <title>ConceptoTec</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
             
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="quienes_somos col col-md-6 col-sm-12  border text-center">
+                        <div class="quienes_somos col col-md-12 col-sm-12 text-center">
                             <h2>¿Quienes somos?</h2>
                             <p>Somos una empresa Tech de distribucion de hardware desde nuestra sede en Bogotá
                             tambien ofrecemos servicio de impresión 3D, instalación de camaras de seguridad para
@@ -78,14 +78,8 @@
                             y dar un servicio responsable.</p>
                         </div
 
-                        <div class="container-fluid">
-                             <div class="row col-md-6 col-sm-12">
-                                <img src="../assets/img/logotipo.png" class="img-fluid" alt="logo de conceptotec">
-                             </div>
-                        </div>
-
-                        <div class="container-fluid">
-                            <div class="row col-md-6 col-sm-12 justify-self-center">
+                        <div class="imgan02 container-fluid">
+                            <div class="row col-md-12 col-sm-12 justify-content-center">
                                <img src="../assets/img/control-calidad.jpg" class="img-fluid" alt="imagen de control de calidad">
                             </div>
                        </div>
