se agrega un boton enviar al formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -72,15 +72,21 @@
           </div>
     
           <div class="container mt-4 mb-4">
-            <div class="mb-3 bg-secondary col-4 mt-4">
+            <div class="mb-3 bg-secondary col col-lg-8 col-md-12 col-sm-8 mt-4">
                 <label class="" for="exampleFormControlInput1" class=" form-label">Correo electronico</label>
                 <input type="email" class="form-control id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
               </div>
-              <div class="mb-3 bg-secondary col-4">
+              <div class="mb-3 bg-secondary col col col-lg-8 col-md-12 col-sm-8">
                 <label for="exampleFormControlTextarea1" class="form-label">Tipo de solicitud</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
+
+              <input class="btn btn-primary ml-4" type="submit" value="Enviar">
           </div>
+
+            
+
+
 
     <footer id="footer">
         <div class="container-fluid">
